Add NoSyncProvider